# ElectoralSim

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  USAGE.md  app.py  build.sbt  cover_letter.txt  critical_synthesis.md  demo_animation.py  election_abm_part1.md  election_abm_part2.md  election_abm_part3.md  electoral-sim.1  final_research_paper.md  main.tex  mkdocs.yml  policy_brief.md  publication_venues.md  pyproject.toml  references.bib  requirements.txt  setup_git.ps1  verify_loader.py  verify_real_names.py  verify_visualization.py  visualize_results.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  coverage.yml  docs.yml  lint.yml  publish.yml  release-drafter.yml  release.yml  stale.yml  tests.yml
.hypothesis/constants/: 057458a5846fee7b  0f8d651518fa2815  135243700002a646  17b897df5bd88660  18e0d635fab13496  1a2bd9fecc9733b9  1fab4acacb303a2f  1fcc52b71023465f  24924c0af733f45c  24cca4b772cdf4c8  (+43 more)
docs/: MAINTENANCE.md  cli.md  index.md  installation.md  mesa_frames_contributions.md  mesa_frames_reference.md  quickstart.md
electoral_sim/: __init__.py  cli.py  coalition.py  government.py  india_election.py  model.py  numba_accel.py  voter_behavior.py
examples/: batch_runner_demo.py  custom_toolkit_demo.py
scripts/: benchmark_gpu.py  benchmark_scale.py  bump_version.py  do_release.py  release.py  release_pypi.bat  release_test.bat
tests/: benchmark_cache.py  reproduce_error.py  stress_test.py  test_additional.py  test_advanced.py  test_api.py  test_basic.py  test_batch_runner.py  test_comprehensive.py  test_improved.py  test_integration.py  test_p1_features.py  test_p2_features.py  test_smoke.py
(+85 files in other folders)
