[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electoral-sim"
version = "0.1.0"
description = "Agent-based electoral simulation for India using mesa-frames"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Electoral Sim Team"}
]
keywords = [
    "election",
    "simulation",
    "agent-based-modeling",
    "mesa",
    "india",
    "voting",
    "electoral-systems",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Life",
]
requires-python = ">=3.10"
dependencies = [
    "mesa>=3.0.0",
    "mesa-frames>=0.1.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
]
all = [
    "electoral-sim[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/Ayush12358/electoral-simulation-india"
Repository = "https://github.com/Ayush12358/electoral-simulation-india"

[project.scripts]
electoral-sim = "electoral_sim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["electoral_sim*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
